# g5k-kickstart

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/: getting-started.md  mamut-example.md  running-experiments.md  storage-and-sync.md  usage-policy.md
example/: README.md  pyproject.toml
example/scripts/: launch_example.sh  sync_results_back.sh
example/src/example_experiment/: parallel_backend.py  runner.py  solver.py
skills/g5k/: SKILL.md
