[project]
name = "example-experiment"
version = "0.1.0"
description = "Toy Grid'5000 experiment: random-restart 2-opt local search on generated TSP instances, dispatched with GNU parallel"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_experiment"]
